--- a/app/views/settings/edit.html.erb
+++ b/app/views/settings/edit.html.erb
@@ -349,7 +349,7 @@
     </p>
 
     <div class="mt-5">
-      <%= button_to "Supprimer définitivement mon compte",
+      <%= button_to "Supprimer mon compte",
             registration_path(:user),
             method: :delete,
             data: {
